Reformat fixed measurements and spacing of 'second' div to responsive ones

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px 0;
+    padding: 2em 10em;
     border: 5px dotted black;
 }
 
@@ -109,30 +109,33 @@ a:link {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
-    margin-bottom: 50px;
+    margin-bottom: 1em;
 }
 
 .second .img-card-master {
     display: flex;
-    gap: 50px;
+    gap: 1em;
+    max-width: 100%;
+    margin-bottom: 1em;
 }
 
 .img-card {
-    width: 200px;
+    width: 10em;
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: column;
     text-align: center;
-    gap: 10px;
 }
 
 .card, .img-card p {
-    flex-basis: 100%;
+    flex: 1;
 }
 
 .card {
-    border: 3px solid #3882f6;
-    border-radius: 20px;
-    height: 200px;
+    border: 0.2em solid #3882f6;
+    border-radius: 1em;
+    width: 100%;
+    height: auto;
+    justify-self: flex-start;
 }
 
 .img-card p {
